--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: actions
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
 on:
   schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+    - cron: "*/1 * * * *"
   workflow_dispatch:
 jobs:
   Explore-GitHub-Actions:
